--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,12 @@
     "__DEV__"    : false,
     "__PROD__"   : false,
     "__CLIENT__" : false,
-    "__SERVER__" : false
+    "__SERVER__" : false,
+    "describe"   : false,
+    "it"         : false,
+    "expect"     : false,
+    "sinon"      : false,
+    "beforeEach" : false
   },
   "plugins": [],
   "rules": {
@@ -114,7 +119,7 @@
 
     "array-bracket-spacing": 0,
     "indent": [2, 4, {
-      "indentSwitchCase": true
+      "SwitchCase": 1
     }],
     "brace-style": 1,
     "camelcase": 0,
@@ -135,7 +140,7 @@
     "max-nested-callbacks": [2, 3],
     "new-cap": 2,
     "new-parens": 0,
-    "newline-after-var": 1,
+    "newline-after-var": 0,
     "no-array-constructor": 2,
     "no-continue": 0,
     "no-inline-comments": 0,
@@ -188,7 +193,7 @@
     "prefer-const": 2,
 
     "max-depth": [2, 3],
-    "max-len": [2, 80, 2],
+    "max-len": [2, 120, 2],
     "max-params": [2, 3]
   }
 }
