--- a/package.json
+++ b/package.json
@@ -1,58 +1,49 @@
 {
-  "name": "webpack-boilerplate",
-  "version": "0.0.0",
-  "description": "Webpack config builder boilerplate.",
-  "main": "index.js",
+  "name": "cubekit-ioc",
+  "version": "0.0.1",
+  "description": "Cubekit IoC Container",
+  "main": "lib/index.js",
   "scripts": {
-    "clean": "rm -rf dist",
-    "compile": "webpack",
-    "dev": "webpack-dev-server --port 3000 --hot --inline --colors --history-api-fallback",
-    "dev:quiet": "webpack-dev-server --port 3000 --hot --inline --colors --no-info --history-api-fallback --quiet",
-    "test": "npm run test:unit",
-    "test:unit": "node ./node_modules/karma/bin/karma start",
-    "deploy": "npm run test && npm run compile"
+    "clean": "rimraf lib dist",
+    "build": "babel src --out-dir lib",
+    "test": "node ./node_modules/karma/bin/karma start --single-run --no-auto-watch karma.config.js",
+    "test:watch": "node ./node_modules/karma/bin/karma start --auto-watch --no-single-run karma.config.js",
+    "prepublish": "npm run test && npm run clean && npm run build"
   },
-  "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cubekit/ioc"
+  },
+  "keywords": [],
+  "author": "Anatoliy Arkhipov <aarkhipov1991@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "autoprefixer-loader": "^1.2.0",
-    "babel": "^5.2.15",
-    "babel-core": "^5.2.15",
-    "babel-eslint": "^3.1.23",
-    "babel-loader": "^5.0.0",
-    "babel-runtime": "^5.4.7",
-    "css-loader": "^0.12.0",
-    "eslint": "^0.24.1",
-    "eslint-loader": "^0.14.2",
-    "extract-text-webpack-plugin": "^0.8.0",
-    "html-webpack-plugin": "^1.3.0",
+  "bugs": {
+    "url": "https://github.com/cubekit/ioc/issues"
+  },
+  "homepage": "https://github.com/cubekit/ioc",
+  "devDependencies": {
+    "babel": "^5.5.8",
+    "babel-core": "^5.6.18",
+    "babel-eslint": "^3.1.15",
+    "babel-loader": "^5.1.4",
+    "eslint": "^1.6.0",
+    "eslint-loader": "^1.1.0",
+    "expect": "^1.6.0",
     "immutable": "^3.7.5",
     "istanbul-instrumenter-loader": "^0.1.3",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-coverage": "^0.5.2",
-    "lodash": "^3.10.1",
-    "moment": "^2.10.6",
-    "node-sass": "^3.2.0",
-    "object-assign": "^3.0.0",
-    "react": "^0.13.3",
-    "sass-loader": "^1.0.3",
-    "sinon": "git://github.com/cjohansen/Sinon.JS#sinon-2.0",
-    "style-loader": "^0.12.1",
-    "webpack": "^1.9.0"
-  },
-  "devDependencies": {
-    "chai": "^2.3.0",
-    "karma": "^0.13.3",
     "karma-chai": "^0.1.0",
     "karma-chai-plugins": "^0.5.0",
-    "karma-coverage": "^0.3.1",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-coverage": "^0.5.2",
     "karma-mocha": "^0.1.10",
-    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-sinon": "^1.0.4",
     "karma-spec-reporter": "0.0.19",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.2.5",
-    "phantomjs-polyfill": "0.0.1",
-    "react-hot-loader": "^1.2.7",
-    "webpack-dev-server": "^1.8.2"
+    "lodash": "^3.10.1",
+    "rimraf": "^2.3.4",
+    "webpack": "^1.9.6"
+  },
+  "dependencies": {
+    "invariant": "^2.0.0"
   }
 }
