--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-loader": "^1.1.0",
     "expect": "^1.6.0",
     "immutable": "^3.7.5",
+    "isparta-loader": "^1.0.0",
     "istanbul-instrumenter-loader": "^0.1.3",
     "karma-chai": "^0.1.0",
     "karma-chai-plugins": "^0.5.0",
@@ -37,6 +38,7 @@
     "karma-coverage": "^0.5.2",
     "karma-mocha": "^0.1.10",
     "karma-sinon": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.6",
     "karma-spec-reporter": "0.0.19",
     "karma-webpack": "^1.7.0",
     "lodash": "^3.10.1",
