--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "homepage": "https://github.com/cubekit/ioc",
   "devDependencies": {
-    "babel": "^5.6.23",
     "babel-core": "^5.8.19",
     "babel-eslint": "^3.1.15",
     "babel-loader": "^5.1.4",
@@ -32,6 +31,8 @@
     "immutable": "^3.7.5",
     "isparta-loader": "^1.0.0",
     "istanbul-instrumenter-loader": "^0.1.3",
+    "mocha": "^2.3.4",
+    "karma": "^0.13.16",
     "karma-chai": "^0.1.0",
     "karma-chai-plugins": "^0.5.0",
     "karma-chrome-launcher": "^0.2.1",
@@ -44,8 +45,5 @@
     "lodash": "^3.10.1",
     "rimraf": "^2.3.4",
     "webpack": "^1.9.6"
-  },
-  "dependencies": {
-    "invariant": "^2.0.0"
   }
 }
